# Hackathon

./: .gitignore  docusaurus.config.js  methods.txt  package-lock.json  package.json  vercel.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: constitution.md
api/: README.md  check_cors.py  check_env.py  check_settings.py  config.py  debug_qdrant.py  debug_qdrant_async.py  debug_qdrant_simple.py  env.template  find_flash.py  full_models_list.txt  list_models.py  main.py  methods.txt  pyproject.toml  requirements.txt  signature.txt  test_flash_latest.py  test_quota.py  update_cors.py  update_env.py  update_model.py  update_to_working_model.py
api/models/: chat.py  document.py
api/routers/: chat.py  ingest.py
api/scripts/: ingest_docs.py
api/services/: agent_service.py  embeddings.py  postgres_service.py  pyproject.toml  qdrant_service.py
docs/: getting-started.md  intro.md  sidebar.js
docs/module-1/: chapter-1-core-concepts.md  chapter-2-rclpy-control.md  chapter-3-urdf-fundamentals.md  chapter-4-joint-control-project.md
docs/module-2/: chapter-1-gazebo-physics.md  chapter-2-unity-digital-twin.md  chapter-3-sensor-simulation.md
docs/module-3-isaac/: chapter-1-isaac-sim-fundamentals.md  chapter-2-isaac-ros-vslam-perception.md  chapter-3-nav2-humanoid-planning.md  chapter-4-isaac-sim-ros-workflow.md
docs/module-4-vla/: chapter-1-voice-to-action.md  chapter-2-cognitive-planning.md  chapter-3-capstone-overview.md
src/: chatbotInjector.js
(+108 files in other folders)
